Made the header a link

--- a/usajobsmapper/templates/index.html
+++ b/usajobsmapper/templates/index.html
@@ -8,7 +8,8 @@
     <nav class="navbar">
         <div class="container-xl">
             <div>
-                <h1 class="mapper">USAJOBSmapper</h1>
+                <a href="/" class="h1 mapper">USAJOBSmapper</a>
+                <!-- <h1 class="mapper">USAJOBSmapper</h1> -->
             </div>
             <div class="dropdown mt-3">
                 <button class="btn dropdown-toggle" type="button" id="notes" data-bs-toggle="dropdown">
